<resources>
    <string name="app_name">WhatsapppClone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="verify_your_phone_number">Verify Your Phone Number</string>
    <string name="we_will_send_otp_on_your_number_to_verify">We will send otp on your number to verify</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="continue_btn">Continue</string>
    <string name="verify_number">Verify Number</string>
    <string name="enter_the_otp_to_verify_your_phone_number">Enter the Otp to verify your Phone Number</string>
    <string name="enter_otp">Enter Otp</string>
    <string name="profile_info">Profile Info</string>
    <string name="please_set_your_name_and_image">Please Set Your Name And Image</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="user_name">User Name</string>
    <string name="tap_to_chat">Tap To Chat</string>
    <string name="enter_your_message_here">Enter Your Message Here</string>
    <string name="smaple_meesage">Smaple Meesage</string>
</resources>